--- a/track_1.html
+++ b/track_1.html
@@ -13,7 +13,7 @@
 </body>
 <script type="module">
 
-    import {check_location_list} from 'https://raw.githubusercontent.com/bertvanlange/geolock-public/refs/heads/main/location_check.js';
+import { check_location_list } from 'https://cdn.jsdelivr.net/gh/bertvanlange/geolock-public@main/location_check.js';
         check_location_list("/locations_track_1.json")
 </script>
 </html>
