--- a/track_3.html
+++ b/track_3.html
@@ -9,11 +9,14 @@
 <body>
     <h1>Welkom op de derde track</h1>
     <p id="status">deze track zal je langs verschillende bier en broodjes plekken ledien typerend voor breda</p>
-    <a href="index.html">Ga terug naar het hooft menu</a>
+    <a href="index.html">Ga terug naar het hooft menu</a><br>
+    <a d ="location_status">Je bevind je nog niet op een juiste locatie</a><br>
+    <a href="track_3.html">Controleer locatie opnieuw</a><br>
+
 </body>
 <script type="module">
 
-    import {check_location_list} from '/location_check.js';
+    import { check_location_list } from 'https://cdn.jsdelivr.net/gh/bertvanlange/geolock-public@main/location_check.js';
         check_location_list("/locations_track_3.json")
 </script>
 </html>
